[package]
name = "linux-runner"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bindgen = "0.66.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }