[package]
name = "linux-runner"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bindgen = "0.69.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs"] }