[package]
name = "linux-runner"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bindgen = "0.69.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }