[package]
name = "linux-rust-bindings"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all"]
all = [
    "aux", "elf", "errno", "epoll", "fcntl", "ioctl", "io_uring", "mman", "poll", "sched",
    "signal", "socket", "stat", "termios", "time", "types", "uio", "utsname", "wait"
]
aux = []
elf = []
errno = []
epoll = []
fcntl = []
ioctl = []
io_uring = []
mman = []
poll = []
sched = []
signal = []
socket = []
stat = []
termios = []
time = []
types = []
uio = []
utsname = []
wait = []
[dependencies]
